--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "Write-Output 'Building project...' ; Copy-Item -Path public\* -Destination dist\ -Recurse -Force",
-    "start": "Write-Output 'Starting project...' ; node src/index.js"
+    "build": "copyfiles -u 1 public/**/* dist",
+    "start": "echo 'Starting project...' ; node src/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "copyfiles": "^2.4.1"
+  }
 }
-
