--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -1,33 +1,20 @@
-name: Deploy to Firebase Hosting
+name: Firebase Deploy
 
 on:
   push:
     branches:
-      - main  # o la rama principal que estés utilizando
+      - main  # Cambia "main" por el nombre de tu rama principal
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'  # Usa la versión de Node.js que necesitas
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build the project
-      run: npm run build  # Ejecuta el script de construcción
-
-    - name: Deploy to Firebase Hosting
-      uses: w9jds/firebase-action@v2.2.0
-      with:
-        args: deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+      
+      - name: Deploy to Firebase
+        run: |
+          firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
