--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -17,5 +17,5 @@ jobs:
       
       - name: Deploy to Firebase
         run: |
-          cd C:\Users\guerrero\Firebase\pimpim
+          cd firebase-project
           firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
